deploy/base/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  namespace: harborline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-remote
  template:
    metadata:
      labels:
        app: catalog-remote
    spec:
      containers:
        - name: catalog
          image: ghcr.io/hesham-73/harborline-catalog:2.3.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catalog
  namespace: harborline
spec:
  selector:
    app: catalog-shifted
  ports:
    - port: 80
      targetPort: 8080
