deploy/base/fraud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fraud
  namespace: harborline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fraud
  template:
    metadata:
      labels:
        app: fraud
    spec:
      containers:
        - name: fraud
          image: ghcr.io/hesham-73/harborline-fraud:2.3.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: fraud
  namespace: harborline
spec:
  selector:
    app: fraud
  ports:
    - port: 80
      targetPort: 8080
