deploy/base/identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity
  namespace: harborline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity
          image: ghcr.io/hesham-73/harborline-identity:2.3.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: identity
  namespace: harborline
spec:
  selector:
    app: identity-shifted
  ports:
    - port: 80
      targetPort: 8080
