deploy/base/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  namespace: harborline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
        - name: inventory
          image: ghcr.io/hesham-73/harborline-inventory:2.3.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  namespace: harborline
spec:
  selector:
    app: inventory-shifted
  ports:
    - port: 80
      targetPort: 8080
