deploy/base/media.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
  namespace: harborline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
        - name: media
          image: ghcr.io/hesham-73/harborline-media:2.3.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: media
  namespace: harborline
spec:
  selector:
    app: media
  ports:
    - port: 80
      targetPort: 8080
