deploy/base/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  namespace: harborline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
        - name: search
          image: ghcr.io/hesham-73/harborline-search:2.3.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: harborline
spec:
  selector:
    app: search
  ports:
    - port: 80
      targetPort: 8080
