deploy/base/shipping.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  namespace: harborline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
    spec:
      containers:
        - name: shipping
          image: ghcr.io/hesham-73/harborline-shipping:2.3.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: shipping
  namespace: harborline
spec:
  selector:
    app: shipping
  ports:
    - port: 80
      targetPort: 8080
