deploy/base/storefront.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storefront
  namespace: harborline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storefront
  template:
    metadata:
      labels:
        app: storefront
    spec:
      containers:
        - name: storefront
          image: ghcr.io/hesham-73/harborline-storefront:2.3.0
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: storefront
  namespace: harborline
spec:
  selector:
    app: storefront
  ports:
    - port: 80
      targetPort: 8080
