deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge
  namespace: harborline
spec:
  rules:
    - host: shop.harborline.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: storefront
                port:
                  number: 80
    - host: api.harborline.example
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: search
                port:
                  number: 80
